--- a/resources/sass/_markdown.scss
+++ b/resources/sass/_markdown.scss
@@ -1,9 +1,9 @@
 .tw-markdown-content {
     background-color: white;
-    max-width: 960px;
+    // max-width: 960px;
     height: 100%;
-    max-height: 95vh;
-    overflow: auto;
+    // max-height: 95vh;
+    // overflow: auto;
     margin: auto;
     font-family: 'Nunito';
     line-height: 1.7;
@@ -27,7 +27,8 @@
         display: flex; flex-direction: column;
         li {
             padding: 7px 0;
-            list-style-type: disc;
+            margin-left: 7px;
+            list-style-type: square;
         }
     }
     blockquote {
