--- a/resources/sass/_markdown.scss
+++ b/resources/sass/_markdown.scss
@@ -23,7 +23,7 @@
     strong {
         font-weight: bold;
     }
-    ul {
+    ul, ol {
         display: flex; flex-direction: column;
         li {
             padding: 7px 0;
