--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,7 +1,7 @@
 // Sass variables:
 $theme: 'dark';
 // Colors ---------------------------------------
-$primaryColor: #3B82F6!default;
+$primaryColor: #2E294E!default;
 $secondaryColor: #ffd166!default;
 $jokerColor: #29335C!default;
 // Notification colors
