--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -120,3 +120,5 @@ html {
 .mindwall-debug {
     // display: none!important;
 }
+
+.text--disabled { color: #444; cursor: not-allowed; opacity: .5; }
