--- a/resources/sass/_animations.scss
+++ b/resources/sass/_animations.scss
@@ -72,8 +72,7 @@ $ease-leave: cubic-bezier(0.55, 0.06, 0.68, 0.19);  // more dynamic leave
     @include slide-transition(x, 100%);
 }
 
-.jumping-button i:hover {
-    display: inline-block;
+.tw-word-gallery-card:hover .jumping-button > i {
     animation: jumpForJoy 2s cubic-bezier(.31,1.1,.3,.79) infinite;
 }
 
