fix: enforce integer casting for user_id in WordOrSentence model
- Added integer type casting for `user_id` in the WordOrSentence model
- Simplified comparison logic in addTagToWord method to ensure consistent type handling

--- a/resources/sass/_markdown.scss
+++ b/resources/sass/_markdown.scss
@@ -18,7 +18,10 @@
         font-size: 1rem;
     }
     p {
-        padding: 10px 0;
+        padding: 10px 0.7px;
+    }
+    p, span {
+        font-size: 1.1rem;
     }
     strong {
         font-weight: bold;
@@ -28,7 +31,7 @@
         li {
             padding: 7px 0;
             margin-left: 7px;
-            list-style-type: square;
+            list-style-type: disc;
         }
     }
     blockquote {
