--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -128,3 +128,11 @@ html {
 }
 
 .text--disabled { color: #444; cursor: not-allowed; opacity: .5; }
+
+.navlink--active {
+	border-bottom: 2px solid #F30D15;
+	a {
+		color: #083182!important;
+        font-weight: bold;
+	}
+}
